kubs/all-in-one.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongo-deployment
  namespace: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
---

kind: Service
apiVersion: v1
metadata:
  name: mongo-service
  namespace: mongo
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongo-express
  namespace: mongo
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongoexpress
          image: mongo-express
          ports:
            - containerPort: 8081
---

kind: Service
apiVersion: v1
metadata:
  name: mongo-express-service
  namespace: mongo
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30001

# ---

# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: mongo-ingress
#   namespace: mongo
# spec:
#   rules:
#     - host: dashboard.info
#       http:
#         paths:
#           # - path: /analytics
#           backend:
#             servicename: mongo-express-service
#             servicePort: 8081
#           # - path: /shopig
#           #   backend:
#           #     servicename: shopigservicesname
#           #     servicePort: 810
