kubs/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1betal
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: my-namespace
spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          - path: /analytics
            backend:
              servicename: analyticsservicesname
              servicePort: 800
          - path: /shopig
            backend:
              servicename: shopigservicesname
              servicePort: 810
     - host: dashboard.com
      http:
        paths:
          - path: /analytics
            backend:
              servicename: analyticsservicesname
              servicePort: 800
          - path: /shopig
            backend:
              servicename: shopigservicesname
              servicePort: 810
              
    # - host: another.com
    #   http:
    #     paths:
    #       - path: /analytics
    #         backend:
    #           servicename: analyticsservicesname
    #           servicePort: 800
    #       - path: /shopig
    #         backend:
    #           servicename: shopigservicesname
    #           servicePort: 810
